Fixed bug #42802 (Namespace not supported in typehints)